--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -18,40 +18,7 @@ proxies:
     protocol-param: 45641:1119_jE165t
     group: Update-二爷
   - &id002
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: ssr
-    server: cm01.newcome.xyz
-    port: 7706
-    password: jFa4F1
-    cipher: chacha20-ietf
-    obfs: plain
-    protocol: auth_aes128_sha1
-    obfs-param: 511df45641.microsoft.com
-    protocol-param: 45641:1119_jE165t
-    group: Update-二爷
-  - &id003
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 142.171.202.130
-    port: 443
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    servername: www.87981532.xyz
-    network: ws
-    ws-opts:
-      path: /path/1702650992491
-  - &id004
     name: 🇺🇸_US_美国_1
-    type: ss
-    server: 54.70.3.6
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id005
-    name: 🇺🇸_US_美国_2
     type: vmess
     server: 45.58.153.25
     port: 30000
@@ -64,38 +31,8 @@ proxies:
     network: ws
     ws-opts:
       path: /path/1702961716738
-  - &id006
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 52.33.95.19
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id007
-    name: 🇺🇸_US_美国_4
-    type: trojan
-    server: jp1.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
-    port: 443
-    udp: true
-    password: 6ca647f5-91c2-4bf6-b444-762f171ad696
-    sni: 13-231-155-134.nhost.00cdn.com
-    skip-cert-verify: true
-    network: tcp
-  - &id008
-    name: 🇬🇧_GB_英国
-    type: vmess
-    server: 172.99.190.109
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: linkvws
-  - &id009
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+  - &id003
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
     type: ssr
     server: cm01.newcome.xyz
     port: 7701
@@ -106,27 +43,44 @@ proxies:
     obfs-param: 5d3ee46961.microsoft.com
     protocol-param: 46961:1210-Tha
     group: Update-二爷
-  - &id010
-    name: 🇺🇸_US_美国_5
+  - &id004
+    name: 🇺🇸_US_美国_2
     type: ss
-    server: 35.90.10.174
+    server: 52.33.95.19
     port: 443
     password: amazonskr05
     cipher: aes-256-cfb
-  - &id011
-    name: 🇺🇸_US_美国_6
-    type: ss
-    server: 35.87.39.181
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id012
-    name: 🇺🇸_US_美国_7
+  - &id005
+    name: 🇨🇳_CN_中国->🇸🇰_SK_斯洛伐克
+    type: trojan
+    server: gbs.pptv-tv.store
+    port: 17728
+    udp: true
+    password: 299a6171-b4ce-403a-8157-c3dad55ef3a2
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
     type: vmess
-    server: 104.21.75.246
-    port: 80
+    server: hexsen.com
+    port: 443
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: de04add9-5c68-8bab-950c-08cd5320df18
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /argo-vmess?ed=2048
+      headers:
+        host: us.king361.cf
+  - &id007
+    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大_1
+    type: vmess
+    server: t.cnmjcn.cyou
+    port: 16648
+    cipher: auto
+    uuid: c2c76420-257f-492a-b20f-6560f3bfa78d
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -134,16 +88,55 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: sbl2.shabijichang.com
-  - &id013
-    name: 🇺🇸_US_美国_8
+        host: d4d028243c73047d9171bacb9b0439e8.mobgslb.tbcache.com
+  - &id008
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+    type: trojan
+    server: skk.moe
+    port: 8443
+    udp: true
+    password: 41aa073b-68fa-40c0-9b1c-9dc42c0b312c
+    sni: vps.restia.love
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 41aa073b-68fa-40c0-9b1c-9dc42c0b312c-trojan
+      headers:
+        host: tj.restia.love
+  - &id009
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
+    type: vmess
+    server: skk.moe
+    port: 8443
+    cipher: none
+    uuid: 41aa073b-68fa-40c0-9b1c-9dc42c0b312c
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 41aa073b-68fa-40c0-9b1c-9dc42c0b312c-vm
+      headers:
+        host: vm.restia.love
+  - &id010
+    name: 🇺🇸_US_美国_3
     type: ss
-    server: 94.131.115.129
-    port: 38108
-    password: bNUe0jR9rzsvLEzfPmI4Of
-    cipher: chacha20-ietf-poly1305
-  - &id014
-    name: 🇺🇸_US_美国_9
+    server: 35.90.10.174
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id011
+    name: 🇨🇦_CA_加拿大
+    type: trojan
+    server: 68.233.121.121
+    port: 40020
+    udp: true
+    password: 57edfecf-5694-4a34-8072-54a4f0636a62
+    sni: frontend.kuangbiaoyun.com
+    skip-cert-verify: true
+    network: tcp
+  - &id012
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: singapore.com
     port: 80
@@ -157,21 +150,76 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: ssrsub.v03.ssrsub.com
+  - &id013
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+    type: trojan
+    server: frontend.kuangbiaoyun.com
+    port: 40007
+    udp: true
+    password: 57edfecf-5694-4a34-8072-54a4f0636a62
+    sni: frontend.kuangbiaoyun.com
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇬🇧_GB_英国
+    type: vmess
+    server: 172.99.190.109
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: linkvws
   - &id015
-    name: 🇫🇷_FR_法国
-    type: ss
-    server: 185.231.205.80
-    port: 1443
-    password: MGQwNTgw
-    cipher: chacha20-ietf-poly1305
+    name: 🇩🇪_DE_德国_1
+    type: trojan
+    server: 5.104.108.109
+    port: 443
+    udp: true
+    password: 45a8d20d-9a78-4be4-a74a-ab3b9e84e34e
+    sni: 20-24-33-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
   - &id016
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: ss
-    server: 91.194.161.7
-    port: 8388
-    password: OWJlYjYy
-    cipher: chacha20-ietf-poly1305
+    name: 🇩🇪_DE_德国_2
+    type: trojan
+    server: 5.104.108.120
+    port: 443
+    udp: true
+    password: 45a8d20d-9a78-4be4-a74a-ab3b9e84e34e
+    sni: 20-24-33-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
   - &id017
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: ssr
+    server: cm01.newcome.xyz
+    port: 7706
+    password: jFa4F1
+    cipher: chacha20-ietf
+    obfs: plain
+    protocol: auth_aes128_sha1
+    obfs-param: 511df45641.microsoft.com
+    protocol-param: 45641:1119_jE165t
+    group: Update-二爷
+  - &id018
+    name: 🇺🇸_US_美国_5
+    type: ss
+    server: 35.87.39.181
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id019
+    name: 🇺🇸_US_美国_6
+    type: ss
+    server: 54.70.3.6
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id020
     name: 🇳🇿_NZ_新西兰
     type: trojan
     server: 216.73.156.230
@@ -181,16 +229,22 @@ proxies:
     sni: 216.73.156.230
     skip-cert-verify: true
     network: tcp
-  - &id018
-    name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
-    type: trojan
-    server: gbs.pptv-tv.store
-    port: 17728
-    udp: true
-    password: 299a6171-b4ce-403a-8157-c3dad55ef3a2
+  - &id021
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: us-02.jikuai.xyz
+    port: 2082
+    cipher: auto
+    uuid: 70666776-4e9f-4350-b3f0-afaff6a70db0
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id019
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: us-02.jikuai.xyz
+  - &id022
     name: 🇸🇬_SG_新加坡
     type: trojan
     server: 185.230.245.213
@@ -202,6 +256,85 @@ proxies:
     network: ws
     ws-opts:
       path: /gateway/connect
+  - &id023
+    name: 🇺🇸_US_美国_8
+    type: trojan
+    server: hk1.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: cc287f24-c5a5-4ebc-a77a-bb95ff902445
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id024
+    name: 🇺🇸_US_美国_9
+    type: trojan
+    server: hk2.lvwf8n-hh8e-2300-nmoo-d2e9naobeacn.9d8f269f96b25232-759cbb36d6548597.kaufen
+    port: 443
+    udp: true
+    password: cc287f24-c5a5-4ebc-a77a-bb95ff902445
+    sni: 13-231-155-134.nhost.00cdn.com
+    skip-cert-verify: true
+    network: tcp
+  - &id025
+    name: 🇫🇷_FR_法国
+    type: ss
+    server: 185.231.205.80
+    port: 1443
+    password: MGQwNTgw
+    cipher: chacha20-ietf-poly1305
+  - &id026
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: ss
+    server: 91.194.161.7
+    port: 8388
+    password: OWJlYjYy
+    cipher: chacha20-ietf-poly1305
+  - &id027
+    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大_2
+    type: vmess
+    server: m.cnmjcn.com
+    port: 16648
+    cipher: auto
+    uuid: c2c76420-257f-492a-b20f-6560f3bfa78d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: d4d028243c73047d9171bacb9b0439e8.mobgslb.tbcache.com
+  - &id028
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: cf-lt.sharecentre.online
+    port: 80
+    cipher: auto
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v004.ssrsub.com
+  - &id029
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: 104.21.75.246
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -247,6 +380,16 @@ proxy-groups:
       - *id017
       - *id018
       - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -271,6 +414,16 @@ proxy-groups:
       - *id017
       - *id018
       - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
   - name: SELECT
     type: select
     proxies:
@@ -293,6 +446,16 @@ proxy-groups:
       - *id017
       - *id018
       - *id019
+      - *id020
+      - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
